Added culture category, sorted all culture cards out of basic and some additional sorting and correcting.

--- a/categories/basic.tex
+++ b/categories/basic.tex
@@ -39,293 +39,271 @@
 \whitecard{Basis}{Angela Merkels Oberarme.}%
 \whitecard{Basis}{Arbeitslose.}%
 
-\whitecard{Basis}{Arnold Schwarzenegger.}%
 \whitecard{Basis}{Authentische\newline mexikanische\newline Cuisine.}%
 \whitecard{Basis}{AXE\SymbReg Deo.}%
-
 \whitecard{Basis}{Balzverhalten.}%
+
 \whitecard{Basis}{BATMAN!!!}%
 \whitecard{Basis}{Bayern.}%
-
 \whitecard{Basis}{Bei den\newline Special\newline Olympics\newline schummeln.}%
+
 \whitecard{Basis}{Bei der\newline Erwähnung von\newline Hutus und\newline Tutsis\newline unkontrollierbar\newline kichern müssen.}%
 \whitecard{Basis}{Beidseitige\newline Bereitschaft\newline zum nuklearen\newline Gegenschlag.}%
-
 \whitecard{Basis}{Benutzte\newline Unterhosen.}%
+
 \whitecard{Basis}{Berühmte\newline schwarze\newline Kollegen.}%
 \whitecard{Basis}{Betagte\newline japanische\newline Männer.}%
-
 \whitecard{Basis}{Beweise\newline vernichten.}%
+
 \whitecard{Basis}{Bienen?}%
 \whitecard{Basis}{Bifi\SymbReg.}%
-
 \whitecard{Basis}{Bilder von Brüsten.}%
+
 \whitecard{Basis}{Bill Nye,\newline dieser Wissenschafts-Heini.}%
 \whitecard{Basis}{Bis nach der\newline Hochzeit\newline warten.}%
-
 \whitecard{Basis}{Burschen ohne Ärsche.}%
-\whitecard{Basis}{Cards against Humanity.}%
-\whitecard{Basis}{Crystal Meth.}%
 
 \whitecard{Basis}{Darke und\newline mysteriöse\newline Mächte,\newline die man nicht kontrollieren kann.}%
-\whitecard{Basis}{Darth Vader.}%
 \whitecard{Basis}{Das Blut von\newline Jesus Christus.}%
-
 \whitecard{Basis}{Das Ende der Straße.}%
+
 \whitecard{Basis}{Das Flötensolo aus "My Heart Will Go On".}%
 \whitecard{Basis}{Das Herz eines Kindes.}%
-
 \whitecard{Basis}{Das jüngste\newline Gericht.}%
+
 \whitecard{Basis}{Das Leben eines Piraten.}%
 \whitecard{Basis}{Das letzte noch lebende Bison essen.}%
-
 \whitecard{Basis}{Das Licht einer Milliarde\newline Sonnen.}%
-\whitecard{Basis}{Das\newline Cookie Monster.}%
-\whitecard{Basis}{Das\newline schwedische\newline Tempur-Pedic\SymbReg \newline  Schlafsystem.}%
 
+\whitecard{Basis}{Das\newline schwedische\newline Tempur-Pedic\SymbReg \newline  Schlafsystem.}%
 \whitecard{Basis}{Das Patriarchat.}%
 \whitecard{Basis}{Das Richtige tun.}%
-\whitecard{Basis}{Das Verletzen unserer grundlegensten Menschenrechte.}%
 
+\whitecard{Basis}{Das Verletzen unserer grundlegensten Menschenrechte.}%
 \whitecard{Basis}{Das Wunder der Geburt.}%
 \whitecard{Basis}{Dein\newline merkwürdiger\newline Bruder.}%
-\whitecard{Basis}{Dem Sonnen-\newline untergang\newline entgegenreiten.}%
 
+\whitecard{Basis}{Dem Sonnen-\newline untergang\newline entgegenreiten.}%
 \whitecard{Basis}{Den Antichrist gebären.}%
 \whitecard{Basis}{Der Ahoi-Brause Mann.}%
-\whitecard{Basis}{Der Geruch alter Leute.}%
 
+\whitecard{Basis}{Der Geruch alter Leute.}%
 \whitecard{Basis}{Der gesamte Chor aus einem Mormonen-Gotteshaus.}%
 \whitecard{Basis}{Der hart\newline arbeitende Türke.}%
-\whitecard{Basis}{Der kalte,\newline erfrischende\newline Geschmack\newline einer Pepsi\SymbReg}%
 
+\whitecard{Basis}{Der kalte,\newline erfrischende\newline Geschmack\newline einer Pepsi\SymbReg}%
 \whitecard{Basis}{Der Milchmann.}%
 \whitecard{Basis}{Der\newline amerikanische\newline Traum.}%
-\whitecard{Basis}{Der\newline Erklär-Bär-Blick.}%
 
+\whitecard{Basis}{Der\newline Erklär-Bär-Blick.}%
 \whitecard{Basis}{Der\newline Ku-Klux-Klan.}%
 \whitecard{Basis}{Der\newline Übermensch.}%
-\whitecard{Basis}{Der Papst.}%
 
+\whitecard{Basis}{Der Papst.}%
 \whitecard{Basis}{Der Rhythmus Afrikas.}%
 \whitecard{Basis}{Der Teufel höchst selbst.}%
-\whitecard{Basis}{Der unausweichliche\newline Hitzetod des\newline Universums.}%
 
+\whitecard{Basis}{Der unausweichliche\newline Hitzetod des\newline Universums.}%
 \whitecard{Basis}{Der Urknall.}%
 \whitecard{Basis}{Der Versailler Vertrag.}%
-\whitecard{Basis}{Der Zorn des\newline Putins.}%
 
+\whitecard{Basis}{Der Zorn des\newline Putins.}%
 \whitecard{Basis}{Dibadibadu.}%
 \whitecard{Basis}{Die Amisch.}%
-\whitecard{Basis}{Die Bibel.}%
 
-\whitecard{Basis}{Die Eurokrise.}%
+\whitecard{Basis}{Die Bibel.}%
 \whitecard{Basis}{Die Hose\newline runterlassen.}%
 \whitecard{Basis}{Die jährliche Massenhinrichtung.}%
 
 \whitecard{Basis}{Die Kunst der Verführung.}%
 \whitecard{Basis}{Die Leiden einer Frau.}%
-\whitecard{Basis}{Die Macht.}%
-
 \whitecard{Basis}{Die\newline Alibi-Minderheit.}%
+
 \whitecard{Basis}{Die Pfadfinder.}%
 \whitecard{Basis}{Die Placenta.}%
-
 \whitecard{Basis}{Die unendliche menschliche Dummheit.}%
+
 \whitecard{Basis}{Die unsichtbare Hand.}%
 \whitecard{Basis}{Die wahre\newline Bedeutung von\newline Weihnachten.}%
-
 \whitecard{Basis}{Die Wunder des Orients.}%
+
 \whitecard{Basis}{Dominos\SymbReg Oreo Dessert Pizza.}%
 \whitecard{Basis}{DU MUSST\newline WEITERE\newline MASTEN\newline KONSTRUIEREN.}%
-
 \whitecard{Basis}{Echte zwischenmenschliche\newline Beziehungen.}%
+
 \whitecard{Basis}{Ehefrauliche Pflichten.}%
 \whitecard{Basis}{Eier.}%
-
 \whitecard{Basis}{Ein Arschloch zu Kindern sein.}%
+
 \whitecard{Basis}{Ein Arsch mit Ohren sein.}%
 \whitecard{Basis}{Ein bisschen\newline gottverdammte\newline Ruhe und\newline Frieden.}%
-
 \whitecard{Basis}{Ein chinesisches Gymnastikteam.}%
+
 \whitecard{Basis}{Eine Backpfeife.}%
 \whitecard{Basis}{Eine Billiarde Euro.}%
-
 \whitecard{Basis}{Eine Eishacken-Lobotomie.}%
-\whitecard{Basis}{Eine Erektion, die länger als vier Stunden dauert.}%
-\whitecard{Basis}{Eine Errektion verstecken.}%
 
+\whitecard{Basis}{Eine Erektion, die länger als vier Stunden dauert.}%
+\whitecard{Basis}{Eine Erektion verstecken.}%
 \whitecard{Basis}{Eine hässliche Fresse.}%
+
 \whitecard{Basis}{Ein Ei legen.}%
 \whitecard{Basis}{Ein Eimer voller Fischköpfe.}%
-
 \whitecard{Basis}{Eine Jungfrau in einen Vulkan werfen.}%
-\whitecard{Basis}{Eine M. Night\newline Shyamalan\newline Story-Wendung.}%
-\whitecard{Basis}{Einem Roboter beibringen, zu lieben.}%
 
+\whitecard{Basis}{Einem Roboter beibringen, zu lieben.}%
 \whitecard{Basis}{Eine\newline asymmetrische Brust-Vergößerung.}%
 \whitecard{Basis}{Eine\newline enttäuschende Geburtstags-\newline party.}%
-\whitecard{Basis}{Eine\newline geschwätzige\newline Antilope.}%
 
+\whitecard{Basis}{Eine\newline geschwätzige\newline Antilope.}%
 \whitecard{Basis}{Eine\newline homoerotische\newline Volleyball-\newline Montage.}%
 \whitecard{Basis}{Eine\newline Mitgliedschaft\newline in einem\newline Fitness-Center.}%
-\whitecard{Basis}{Einen\newline Kerzenhalter\newline auf deine\newline Feinde fallen\newline lassen und\newline am Seil\newline hochklettern.}%
 
+\whitecard{Basis}{Einen\newline Kerzenhalter\newline auf deine\newline Feinde fallen\newline lassen und\newline am Seil\newline hochklettern.}%
 \whitecard{Basis}{Einen Schmollmund machen.}%
 \whitecard{Basis}{Eine salzige Überraschung.}%
-\whitecard{Basis}{Eine Spur aus\newline Tränen}%
 
+\whitecard{Basis}{Eine Spur aus\newline Tränen}%
 \whitecard{Basis}{Einfach\newline großartig\newline sein.}%
 \whitecard{Basis}{Ein Falke mit\newline einer Mütze\newline auf dem Kopf.}%
-\whitecard{Basis}{Ein Gehirntumor.}%
 
+\whitecard{Basis}{Ein Gehirntumor.}%
 \whitecard{Basis}{Ein geschmackvolles Dekolleté.}%
 \whitecard{Basis}{Ein Glassdach.}%
-\whitecard{Basis}{Ein kleines Pferd.}%
 
+\whitecard{Basis}{Ein kleines Pferd.}%
 \whitecard{Basis}{Ein Leben voller Traurigkeit.}%
-\whitecard{Basis}{Ein Live-Studio Publikum.}%
 \whitecard{Basis}{Ein M16\newline Sturmgewehr.}%
 
 \whitecard{Basis}{Einmal richtig dran\newline schnuppern.}%
 \whitecard{Basis}{Ein Mann\newline mittleren\newline Alters in\newline Rollschuhen.}%
 \whitecard{Basis}{Ein Nerd-Spasti.}%
 
-\whitecard{Basis}{Ein\newline Amateurvideo\newline von Heidi Klum,\newline wie sie in eine\newline Dose Ravioli\newline heult.}%
 \whitecard{Basis}{Ein\newline ausgewogenes\newline Frühstück.}%
 \whitecard{Basis}{Ein\newline gottverdammter Zauberer\newline sein.}%
-
 \whitecard{Basis}{Ein\newline Mikroschwein\newline mit einem\newline Regenmantel\newline und\newline Gummiestiefeln.}%
+
 \whitecard{Basis}{Ein Pantomime,\newline der einen\newline Herzanfall hat.}%
 \whitecard{Basis}{Ein Ratschlag von einem weisen alten Mann.}%
-
 \whitecard{Basis}{Ein rauchender Affe.}%
+
 \whitecard{Basis}{Ein Sack voller magischer Bohnen.}%
 \whitecard{Basis}{Ein scharfer Frühstücks-Burrito.}%
-
 \whitecard{Basis}{Ein schlechtes Mundwerk.}%
+
 \whitecard{Basis}{Ein Stamm von Kriegerinnen.}%
 \whitecard{Basis}{Ein törichter Mord.}%
-
 \whitecard{Basis}{Ein trübseliger Zoo-Löwe.}%
+
 \whitecard{Basis}{Ein übergroßer Lolli.}%
 \whitecard{Basis}{Ein verirrtes Schamhaar.}%
-
 \whitecard{Basis}{Ein wirklich\newline cooler Hut.}%
+
 \whitecard{Basis}{Ein Würstchen-Fest.}%
 \whitecard{Basis}{Embrionale Stammzellen.}%
-
 \whitecard{Basis}{Emotionen.}%
+
 \whitecard{Basis}{Erdrückende Schulden.}%
 \whitecard{Basis}{Eregierte\newline Nippel.}%
-
 \whitecard{Basis}{Essbare\newline Unterwäsche.}%
-\whitecard{Basis}{Ethnische\newline Säuberung.}%
-\whitecard{Basis}{Explosionen.}%
 
+\whitecard{Basis}{Explosionen.}%
 \whitecard{Basis}{Extrem enge Hosen.}%
 \whitecard{Basis}{Feigenpudding.}%
-\whitecard{Basis}{Fett und dumm sein.}%
 
+\whitecard{Basis}{Fett und dumm sein.}%
 \whitecard{Basis}{Fingerfarben.}%
 \whitecard{Basis}{Fleischfressende Bakterien.}%
-\whitecard{Basis}{Fluglose Vögel.}%
 
+\whitecard{Basis}{Fluglose Vögel.}%
 \whitecard{Basis}{Frauen in Joghurt-Werbespots.}%
 \whitecard{Basis}{Freunde mit\newline gewissen\newline Vorzügen.}%
-\whitecard{Basis}{Friendly Fire.}%
 
+\whitecard{Basis}{Friendly Fire.}%
 \whitecard{Basis}{Frohlocken.}%
 \whitecard{Basis}{Funkig-frische Rhythmen.}%
-\whitecard{Basis}{Für das\newline Verschwinden\newline von Schwulen\newline beten.}%
 
+\whitecard{Basis}{Für das\newline Verschwinden\newline von Schwulen\newline beten.}%
 \whitecard{Basis}{Gänse.}%
 \whitecard{Basis}{Geister.}%
-\whitecard{Basis}{Genau das,\newline was du\newline vermuten\newline würdest.}%
 
+\whitecard{Basis}{Genau das,\newline was du\newline vermuten\newline würdest.}%
 \whitecard{Basis}{Genetisch\newline manipulierte\newline Kampf-Schildkröten mit Säure-Atem.}%
 \whitecard{Basis}{Gerichtlich\newline angeordneter \newline Entzug.}%
-\whitecard{Basis}{Gestaltwandler.}%
 
+\whitecard{Basis}{Gestaltwandler.}%
 \whitecard{Basis}{Glänzende\newline Dinge.}%
 \whitecard{Basis}{Gleich-\newline geschlechtlicher\newline Eiskunstlauf.}%
-\whitecard{Basis}{Goblins.}%
 
+\whitecard{Basis}{Goblins.}%
 \whitecard{Basis}{Gott.}%
 \whitecard{Basis}{Grabrauben.}%
-\whitecard{Basis}{Großmutter.}%
 
+\whitecard{Basis}{Großmutter.}%
 \whitecard{Basis}{Halb nackt\newline auf einem\newline McDonalds-\newline Parkplatz\newline aufwachen.}%
 \whitecard{Basis}{Hefe.}%
-\whitecard{Basis}{Heiraten, ein\newline paar Kinder\newline haben, ein\newline bisschen Kram\newline kaufen, sich dann\newline zur Ruhe setzen\newline und sterben.}%
 
+\whitecard{Basis}{Heiraten, ein\newline paar Kinder\newline haben, ein\newline bisschen Kram\newline kaufen, sich dann\newline zur Ruhe setzen\newline und sterben.}%
 \whitecard{Basis}{Heiße\newline Menschen.}%
 \whitecard{Basis}{Heißer Käse.}%
-\whitecard{Basis}{Herpes.}%
 
+\whitecard{Basis}{Herpes.}%
 \whitecard{Basis}{Herz-\newline erweichende\newline Weisenkinder.}%
 \whitecard{Basis}{Hetero-\newline normativität.}%
-\whitecard{Basis}{Hip-Hop\newline Juwelen.}%
 
+\whitecard{Basis}{Hip-Hop\newline Juwelen.}%
 \whitecard{Basis}{Hippiemusik.}%
 \whitecard{Basis}{Hoffnung.}%
-\whitecard{Basis}{Holzfäller\newline Phantasien.}%
 
+\whitecard{Basis}{Holzfäller\newline Phantasien.}%
 \whitecard{Basis}{Homosexueller\newline Lebensstil.}%
 \whitecard{Basis}{Hormon-Injektionen.}%
-\whitecard{Basis}{Hurricane\newline Katrina.}%
 
+\whitecard{Basis}{Hurricane\newline Katrina.}%
 \whitecard{Basis}{``Ich liebe dich''\newline sagen.}%
 \whitecard{Basis}{In Flammen \newline stehen.}%
-\whitecard{Basis}{In Problemen ertrinken.}%
 
-\whitecard{Basis}{Justin Bieber.}%
+\whitecard{Basis}{In Problemen ertrinken.}%
 \whitecard{Basis}{Kamikaze-Kissen.}%
 \whitecard{Basis}{Katapulte.}%
 
-\whitecard{Basis}{Keanu Reeves.}%
 \whitecard{Basis}{Keine Hosen\newline tragen.}%
 \whitecard{Basis}{Kettensäge für die Hände.}%
-
 \whitecard{Basis}{Kiefersperre.}%
+
 \whitecard{Basis}{Kinder an\newline Leinen.}%
 \whitecard{Basis}{Kinder-Schönheits-\newline wettbewerbe.}%
-
 \whitecard{Basis}{Kostenlose Proben.}%
+
 \whitecard{Basis}{Kräftige\newline Oberschenkel.}%
 \whitecard{Basis}{Krankenpfleger.}%
-
 \whitecard{Basis}{Krankhaft\newline Fettleibige.}%
+
 \whitecard{Basis}{Kriegsbedingte Amputationen.}%
 \whitecard{Basis}{Krümel überall auf dem ganzen gottverdammten Teppich.}%
-
 \whitecard{Basis}{Kuscheln.}%
-\whitecard{Basis}{Kybernetische Verbesserungen.}%
-\whitecard{Basis}{Lady Gaga.}%
 
+\whitecard{Basis}{Kybernetische Verbesserungen.}%
 \whitecard{Basis}{Landminen.}%
 \whitecard{Basis}{Management-Lösungen mit Synergie-Effekt.}%
-\whitecard{Basis}{Männer.}%
 
+\whitecard{Basis}{Männer.}%
 \whitecard{Basis}{Marcus Iunius Brutus.}%
 \whitecard{Basis}{Martin Luther King.}%
-\whitecard{Basis}{Mehrfache Stichwunden.}%
 
+\whitecard{Basis}{Mehrfache Stichwunden.}%
 \whitecard{Basis}{Mein Beziehungs-\newline status.}%
 \whitecard{Basis}{Meine inneren Dämonen.}%
-\whitecard{Basis}{Meine\newline Genitalien.}%
 
+\whitecard{Basis}{Meine\newline Genitalien.}%
 \whitecard{Basis}{Meine Seele.}%
 \whitecard{Basis}{Meine Warzen.}%
-\whitecard{Basis}{Mein schwarzer Hintern.}%
 
+\whitecard{Basis}{Mein schwarzer Hintern.}%
 \whitecard{Basis}{Mein Sexleben.}%
 \whitecard{Basis}{Meister Proper Sauberkraft.}%
-\whitecard{Basis}{Messdiener.}%
 
-\whitecard{Basis}{Michael Jackson.}%
-\whitecard{Basis}{Michael \newline``Bully''\newline Herbig.}%
-\whitecard{Basis}{Miley Cyrus mit 55.}%
+\whitecard{Basis}{Messdiener.}%
 
 \whitecard{Basis}{Mohammed (Geheiligt sei sein Name).}%
 \whitecard{Basis}{Morgan\newline Freemans\newline Stimme.}%
@@ -333,14 +311,10 @@
 
 \whitecard{Basis}{Natürliche männliche Verbesserungen.}%
 \whitecard{Basis}{Natürliche\newline Selektion.}%
-\whitecard{Basis}{Nickelback.}%
-
-\whitecard{Basis}{Nicolas Cage.}%
 \whitecard{Basis}{Obdachlose.}%
-\whitecard{Basis}{Ödipuskomplex.}%
 
+\whitecard{Basis}{Ödipuskomplex.}%
 \whitecard{Basis}{Öffentliches\newline Verspotten.}%
-\whitecard{Basis}{Oompa-Loompas.}%
 \whitecard{Basis}{Opponierbare Daumen.}%
 
 \whitecard{Basis}{Östrogen.}%
@@ -361,23 +335,19 @@
 
 \whitecard{Basis}{Reich sein.}%
 \whitecard{Basis}{Richterin Barbara Salesch.}%
-\whitecard{Basis}{Robert Downey, Jr.}%
-
-\whitecard{Basis}{RoboCop.}%
 \whitecard{Basis}{Ronald\newline McDonald.}%
-\whitecard{Basis}{Rück-\newline erstattungen.}%
 
+\whitecard{Basis}{Rück-\newline erstattungen.}%
 \whitecard{Basis}{Saxophon Solos.}%
 \whitecard{Basis}{Schenkel-\newline schnorcheln.}%
-\whitecard{Basis}{Schlampen.}%
 
+\whitecard{Basis}{Schlampen.}%
 \whitecard{Basis}{Schlechte, lebensverändernde Entscheidungen.}%
 \whitecard{Basis}{Schreckliche\newline Laser-Haar-\newline Entfernungs-\newline Unfälle.}%
-\whitecard{Basis}{Schwarze.}%
 
+\whitecard{Basis}{Schwarze.}%
 \whitecard{Basis}{Schwule.}%
 \whitecard{Basis}{Scientology.}%
-\whitecard{Basis}{Sean Connery.}%
 
 \whitecard{Basis}{Sein Shirt\newline ausziehen.}%
 \whitecard{Basis}{Selbsthass.}%
@@ -385,21 +355,17 @@
 
 \whitecard{Basis}{Sich alleine\newline betrinken.}%
 \whitecard{Basis}{Sich ein paar\newline Eier wachsen lassen.}%
-\whitecard{Basis}{Sido.}%
-
-\whitecard{Basis}{Sigmar Gabriel.}%
 \whitecard{Basis}{Sklaverei.}%
-\whitecard{Basis}{Die Juden.}%
 
+\whitecard{Basis}{Die Juden.}%
 \whitecard{Basis}{Snobismus.}%
 \whitecard{Basis}{Sonnenschein und\newline Regenbögen.}%
-\whitecard{Basis}{So zu tun, als interessiere es einen.}%
 
+\whitecard{Basis}{So zu tun, als interessiere es einen.}%
 \whitecard{Basis}{Spektakuläre Bauchmuskeln.}%
 \whitecard{Basis}{Spießer.}%
-\whitecard{Basis}{Spontane Selbstentzündung.}%
 
-\whitecard{Basis}{Star Trek.}%
+\whitecard{Basis}{Spontane Selbstentzündung.}%
 \whitecard{Basis}{Sterben.}%
 \whitecard{Basis}{Stille.}%
 
@@ -413,65 +379,49 @@
 
 \whitecard{Basis}{Thermonucleare Detonation.}%
 \whitecard{Basis}{The World of Warcraft.}%
-\whitecard{Basis}{Thomas the Train.}%
-
 \whitecard{Basis}{Tom Cruise.}%
+
 \whitecard{Basis}{U-Bahn.}%
 \whitecard{Basis}{Überkompen-\newline sation.}%
-
 \whitecard{Basis}{Unangemes-\newline senes Jodeln.}%
+
 \whitecard{Basis}{Unfassbare Blödheit.}%
 \whitecard{Basis}{Unser erster Chimpansen-Kanzler.}%
-
 \whitecard{Basis}{Unterdrückung.}%
+
 \whitecard{Basis}{Vaterkomplexe.}%
 \whitecard{Basis}{Velociraptor\newline Angriffe.}%
-
-\whitecard{Basis}{Vera Int-Veen}%
 \whitecard{Basis}{Viagra\SymbReg.}%
-\whitecard{Basis}{Von einem\newline Gefühl erwischt werden.}%
 
+\whitecard{Basis}{Von einem\newline Gefühl erwischt werden.}%
 \whitecard{Basis}{Welpen!}%
 \whitecard{Basis}{Wikinger.}%
-\whitecard{Basis}{William Shatner.}%
 
-\whitecard{Basis}{Winnie der Puh.}%
 \whitecard{Basis}{Wissenschaft.}%
 \whitecard{Basis}{Würgen.}%
-
 \whitecard{Basis}{Zeit für mich.}%
+
 \whitecard{Basis}{Zeitreisen\newline Paradox.}%
 \whitecard{Basis}{Zentauren.}%
-
 \whitecard{Basis}{Zuhälter.}%
-\whitecard{Basis}{110\% geben}%
-\whitecard{Basis}{Helmut Kohl.}%
 
+\whitecard{Basis}{110\% geben}%
 \whitecard{Basis}{Rassisitisch voreingenommene Einstellungstests.}%
 \whitecard{Basis}{Bastian\newline Pastevkas\newline Schauspielkarriere.}%
-\whitecard{Basis}{Ein Bop it!}%
 
+\whitecard{Basis}{Ein Bop it!}%
 \whitecard{Basis}{Die Make-A-Wish Stiftung.}%
 \whitecard{Basis}{Whiskas.}%
-\whitecard{Basis}{Til Schweiger.}%
 
-\blackcard{1}{Basis}{In Ihrem neuen Film hat Hannah Montana zum ersten Mal mit \underl zu kämpfen.}%
 \blackcard{1}{Basis}{Als der Pharaoh seine Meinung nicht änderte, beschwörte Moses eine Plage von \underl herauf.}%
 \blackcard{1}{Basis}{Alternative Medizin nutzt jetzt die heilende Energie von \underl.}%
-
 \blackcard{1}{Basis}{Auf was\newline verzichtest du\newline in der\newline Fastenzeit?\newline \underl.}%
-\blackcard{1}{Basis}{Bald zu sehen: \underl, das Musical.}%
-\blackcard{1}{Basis}{Bevor ich Sie töte, Herr Bond, muss ich Ihnen \underl zeigen.}%
 
 \blackcard{1}{Basis}{Das Naturkundemuseum stellt jetzt auch \underl aus.}%
-\blackcard{2}{Basis}{Das neue Superhelden/Kumpan Duo! Es ist \underl und \underl.}%
-\blackcard{1}{Basis}{Demnächst erscheint: Harry Potter und die Kammer der \underl.}%
-
 \blackcard{1}{Basis}{Der Klassenausflug wurde komplett von \underl ruiniert.}%
 \blackcard{1}{Basis}{Ein Essen im Kerzenschein wäre nix ohne \underl.}%
-\blackcard{1}{Basis}{Es tut mir Leid, Herr Professor, aber ich konnte meine Hausaufgaben nicht machen, weil \underl.}%
 
-\blackcard{1}{Basis}{Gleich auf RTL:\newline die Weltmeisterschaft der \underl.}%
+\blackcard{1}{Basis}{Es tut mir Leid, Herr Professor, aber ich konnte meine Hausaufgaben nicht machen, weil \underl.}%
 \blackcard{1}{Basis}{Hier ist die Kirche, da sind der Kirchturm, Öffne die Türen und da ist \underl.}%
 \blackcard{1}{Basis}{Ich habe 99 Probleme, aber \underl ist keines davon.}%
 
@@ -488,35 +438,31 @@
 \blackcard{1}{Basis}{Nach den\newline Erdbeben\newline brachte Bill\newline Gates \underl zu\newline den Haitianern.}%
 
 \blackcard{1}{Basis}{Papa, warum weint Mama?}%
-\blackcard{1}{Basis}{RTLs neue Reality-TV-Show - Jetzt mit 8 Stars die mit \underl zusammenleben.}%
 \blackcard{3}{Basis}{Schritt 1: \underl.\newline Schritt 2: \underl.\newline Schritt 3: Profit.}%
-
 \blackcard{1}{Basis}{Statt der Rute bring der Weihnachtsmann unartigen Kindern jetzt \underl.}%
+
 \blackcard{2}{Basis}{...Und der Preis für \underl geht an \underl.}%
 \blackcard{1}{Basis}{\underl. High Five, bro.}%
-
 \blackcard{2}{Basis}{\underl ist eine heikle Lage die zu \underl führt.}%
+
 \blackcard{1}{Basis}{\underl:\newline Gut bis zum letzten Tropfen.}%
 \blackcard{1}{Basis}{\underl:\newline Von Kindern getestet,\newline von Müttern empfohlen.}%
-
 \blackcard{1}{Basis}{\underl. So will ich sterben!}%
+
 \blackcard{3}{Basis}{\underl + \underl\newline = \underl.}%
 \blackcard{1}{Basis}{Vielleicht wurde sie damit geboren, aber vielleicht ist es auch \underl.}%
-
 \blackcard{1}{Basis}{Warum bin ich so klebrig?}%
+
 \blackcard{1}{Basis}{Warum kann ich nachts nicht schlafen?}%
 \blackcard{1}{Basis}{Warum tut mir alles weh?}%
-
 \blackcard{1}{Basis}{Was bringe ich aus der Türkei mit?}%
+
 \blackcard{1}{Basis}{Was denkt\newline Angela Merkel\newline gerade?\newline \underl.}%
 \blackcard{1}{Basis}{Was gibt es tonnenweise im Himmel?}%
-
 \blackcard{1}{Basis}{Was hat meine letzte Beziehung beendet?}%
-\blackcard{1}{Basis}{Was hat nie verfehlt,\newline eine Party\newline zu beleben?}%
-\blackcard{1}{Basis}{Was hat Vin Diesel zum Mittag gegessen?}%
 
+\blackcard{1}{Basis}{Was hat nie verfehlt,\newline eine Party\newline zu beleben?}%
 \blackcard{1}{Basis}{Was hilft Angela Merkel zum Entspannen?}%
-\blackcard{1}{Basis}{Was ist Batmans geheime Vorliebe?}%
 \blackcard{1}{Basis}{Was ist denn das für ein Geräusch?}%
 
 \blackcard{1}{Basis}{Was ist denn das für ein Geruch?}%
@@ -540,16 +486,12 @@
 \blackcard{1}{Basis}{Womit werden wir in 1000 Jahren bezahlen?}%
 
 \blackcard{1}{Basis}{Womit wirst du immer einen Partner beeindrucken können?}%
-\blackcard{2}{Basis}{Dreamworks präsentiert: "\underl,\newline die Geschichte von \underl."}%
 \blackcard{1}{Basis}{Ab sofort im Flugzeug verboten: \underl.}%
-
 \blackcard{3}{Basis}{Schreibe einen Haiku:\newline \underl \newline \underl \newline \underl}%
+
 \blackcard{1}{Basis}{Wie motivieren die Lehrer an Hauptschulen ihre Schüler, zu lernen?}%
 \blackcard{1}{Basis}{\underl macht Kinder froh und Erwachsene ebenso.}%
-
 \blackcard{1}{Basis}{\underl. Es ist eine Falle!}%
-\blackcard{1}{Basis}{\underl, davon kann man nicht nur einen haben!}%
-\blackcard{1}{Basis}{In M. Night Shyamalans neuen Film findet Bruce Willis heraus, dass \underl in Wirklichkeit die ganze Zeit \underl war.}%
 
+\blackcard{1}{Basis}{\underl, davon kann man nicht nur einen haben!}%
 \blackcard{1}{Basis}{Was ist am meisten emo?}%
-\blackcard{1}{Basis}{99 \underl auf ihrem Weg zum Horizont.}%
