--- a/categories/boese.tex
+++ b/categories/boese.tex
@@ -63,6 +63,8 @@
 \whitecard{Böse}{Lepra.}%
 \whitecard{Böse}{Seppuku.}%
 
+\whitecard{Böse}{Ethnische\newline Säuberung.}%
+
 \blackcard{1}{Böse}{Wofür ist Krieg gut?}%
 \blackcard{1}{Böse}{Das Leben der Indianer wurde für immer verändert, als die Weißen Männer ihnen \underl zeigten.}%
 \blackcard{1}{Böse}{Was haben die USA den Kindern in Afganistan vom Flugzeug abgeworden?\newline \underl.}%
