--- a/categories/drogen.tex
+++ b/categories/drogen.tex
@@ -27,5 +27,7 @@
 \whitecard{Drogen}{Mal so richtig\newline high werden.}%
 \whitecard{Drogen}{Ein Drogendeal.}%
 
+\whitecard{Drogen}{Crystal Meth.}%
+
 \blackcard{1}{Drogen}{Was ist\newline meine\newline Anti-Droge?}%
 \blackcard{2}{Drogen}{Als einen Acid-Trip hatte, wurde \underl zu \underl.}%
