--- a/categories/politics.tex
+++ b/categories/politics.tex
@@ -39,6 +39,10 @@
 \whitecard{Politik}{Weltfrieden.}%
 \whitecard{Politik}{Arbeitsplätze.}%
 
+\whitecard{Politik}{Die Eurokrise.}%
+\whitecard{Politik}{Sigmar Gabriel.}%
+\whitecard{Politik}{Helmut Kohl.}%
+
 \blackcard{1}{Politik}{Und gleich im Heute-Journal: "Hilfe, mein Sohn ist \underl!"}%
 \blackcard{1}{Politik}{Es ist eine Schande, das Kinder heutzutage alle mit \underl in Berührung kommen.}%
 \blackcard{1}{Politik}{Während sich andere Länder einen ``Wettlauf ins All'' lieferten, finanzierte die französische Regierung die Erforschung von \underl.}%
