More sorting, 3 new categories

--- a/categories/fsk16.tex
+++ b/categories/fsk16.tex
@@ -65,6 +65,7 @@
 
 \whitecard{FSK 16}{Ein-\newline vernehmlicher Sex.}%
 \whitecard{FSK 16}{Alice Schwarzers Vagina.}%
+\whitecard{FSK 16}{Bilder von Brüsten.}%
 
 \blackcard{1}{FSK 16}{Eine Studie ergab, dass Teenager 50 Prozent weniger Sex hatten, nachdem man ihnen \underl zeigte.}%
 \blackcard{1}{FSK 16}{Ich denke während des Sex gerne über \underl nach.}%
