--- a/categories/fsk18.tex
+++ b/categories/fsk18.tex
@@ -49,7 +49,6 @@
 
 \whitecard{FSK 18}{Tentakel Pornos.}%
 \whitecard{FSK 18}{Ein schlechter Handjob.}%
-%
-% Blackcards
-%
+\whitecard{FSK 18}{Pacman, unkontrollierbar am Sperma-Schlucken.}%
+
 \blackcard{1}{FSK 18}{Fun Tip! Wenn dein Mann dich um einen\newline Blowjob bittet,\newline überrasche ihn stattdessen mit \underl.}%
