--- a/categories/politics.tex
+++ b/categories/politics.tex
@@ -43,6 +43,16 @@
 \whitecard{Politik}{Sigmar Gabriel.}%
 \whitecard{Politik}{Helmut Kohl.}%
 
+\whitecard{Politik}{Arbeitslose.}%
+\whitecard{Politik}{Der hart\newline arbeitende Türke.}%
+\whitecard{Politik}{Angela Merkels Oberarme.}%
+
+\whitecard{Politik}{Bayern.}%
+\whitecard{Politik}{Das Patriarchat.}%
+\whitecard{Politik}{Der Zorn des\newline Putins.}%
+
+\whitecard{Politik}{Beweise\newline vernichten.}%
+
 \blackcard{1}{Politik}{Und gleich im Heute-Journal: "Hilfe, mein Sohn ist \underl!"}%
 \blackcard{1}{Politik}{Es ist eine Schande, das Kinder heutzutage alle mit \underl in Berührung kommen.}%
 \blackcard{1}{Politik}{Während sich andere Länder einen ``Wettlauf ins All'' lieferten, finanzierte die französische Regierung die Erforschung von \underl.}%
