--- a/categories/boese.tex
+++ b/categories/boese.tex
@@ -64,6 +64,7 @@
 \whitecard{Böse}{Seppuku.}%
 
 \whitecard{Böse}{Ethnische\newline Säuberung.}%
+\whitecard{Böse}{Kriegsbedingte Amputationen.}%
 
 \blackcard{1}{Böse}{Wofür ist Krieg gut?}%
 \blackcard{1}{Böse}{Das Leben der Indianer wurde für immer verändert, als die Weißen Männer ihnen \underl zeigten.}%
