--- a/categories/culture.tex
+++ b/categories/culture.tex
@@ -56,19 +56,27 @@
 \whitecard{Kultur}{Winnie der Puh.}%
 
 \whitecard{Kultur}{Til Schweiger.}%
+\whitecard{Kultur}{Morgan\newline Freemans\newline Stimme.}%
+\whitecard{Kultur}{Tom Cruise.}%
+
+\whitecard{Kultur}{Richterin Barbara Salesch.}%
+\whitecard{Kultur}{BATMAN!!!}%
+\whitecard{Kultur}{Das Flötensolo aus "My Heart Will Go On".}%
+
+\whitecard{Kultur}{Bastian\newline Pastevkas\newline Schauspielkarriere.}%
+
 \blackcard{1}{Kultur}{In Ihrem neuen Film hat Hannah Montana zum ersten Mal mit \underl zu kämpfen.}%
 \blackcard{1}{Kultur}{Bevor ich Sie töte, Herr Bond, muss ich Ihnen \underl zeigen.}%
-
 \blackcard{1}{Kultur}{Bald zu sehen: \underl, das Musical.}%
+
 \blackcard{2}{Kultur}{Das neue Superhelden/Kumpan Duo! Es ist \underl und \underl.}%
 \blackcard{1}{Kultur}{Demnächst erscheint: Harry Potter und die Kammer der \underl.}%
-
 \blackcard{1}{Kultur}{Gleich auf RTL:\newline die Weltmeisterschaft der \underl.}%
+
 \blackcard{1}{Kultur}{RTLs neue Reality-TV-Show - Jetzt mit 8 Stars die mit \underl zusammenleben.}%
 \blackcard{1}{Kultur}{Was hat Vin Diesel zum Mittag gegessen?}%
-
 \blackcard{1}{Kultur}{Was ist Batmans geheime Vorliebe?}%
+
 \blackcard{2}{Kultur}{Dreamworks präsentiert: "\underl,\newline die Geschichte von \underl."}%
 \blackcard{1}{Kultur}{In M. Night Shyamalans neuen Film findet Bruce Willis heraus, dass \underl in Wirklichkeit die ganze Zeit \underl war.}%
-
 \blackcard{1}{Kultur}{99 \underl auf ihrem Weg zum Horizont.}%
