--- a/categories/religion.tex
+++ b/categories/religion.tex
@@ -19,38 +19,28 @@
 % Please note: All whitespace characters might break this document. Please
 % avoid placing whitespace character that are not intended inside these files.
 %
-\documentclass[a4paper,parskip]{scrartcl}
-\usepackage[top=10mm,bottom=10mm,left=15mm,right=15mm]{geometry}
-\usepackage{tikz}
-\usepackage{arev}
-\usepackage[ngerman]{babel}
-\usepackage[utf8]{inputenc}
-\begin{document}
-\def\SymbReg{\textsuperscript{\textregistered}}
-\setlength{\parskip}{-1pt}
+\titlecard{Religion}
+\whitecard{Religion}{72 Jungfrauen.}%
+\whitecard{Religion}{Den Antichrist gebären.}%
 
-\include{commands}
+\whitecard{Religion}{Das Blut von\newline Jesus Christus.}%
+\whitecard{Religion}{Das jüngste\newline Gericht.}%
+\whitecard{Religion}{Der gesamte Chor aus einem Mormonen-Gotteshaus.}%
 
-\include{categories/basic}
-\newpage
-\include{categories/boese}
-\newpage
-\include{categories/drogen}
-\newpage
-\include{categories/eklig}
-\newpage
-\include{categories/fsk16}
-\newpage
-\include{categories/fsk18}
-\newpage
-\include{categories/politics}
-\newpage
-\include{categories/culture}
-\newpage
-\include{categories/religion}
-\newpage
-\include{categories/history}
-\newpage
-\include{categories/ads}
+\whitecard{Religion}{Der Papst.}%
+\whitecard{Religion}{Der Teufel höchst selbst.}%
+\whitecard{Religion}{Die Bibel.}%
 
-\end{document}
+\whitecard{Religion}{Die Amisch.}%
+\whitecard{Religion}{Die Pfadfinder.}%
+\whitecard{Religion}{Gott.}%
+
+\whitecard{Religion}{Martin Luther King.}%
+\whitecard{Religion}{Meine Seele.}%
+\whitecard{Religion}{Messdiener.}%
+
+\whitecard{Religion}{Mohammed (Geheiligt sei sein Name).}%
+\whitecard{Religion}{Scientology.}%
+\whitecard{Religion}{Die Juden.}%
+
+\blackcard{1}{Religion}{Hier ist die Kirche, da sind der Kirchturm, Öffne die Türen und da ist \underl.}%
