Corrections to blackcards.

--- a/categories/basic.tex
+++ b/categories/basic.tex
@@ -25,19 +25,18 @@
 
 \whitecard{Basis}{Alkoholismus.}%
 \whitecard{Basis}{Alten Leuten winken.}%
-
 \whitecard{Basis}{An Dingen\newline lecken, um sie\newline für sich selbst zu\newline beanspruchen.}%
+
 \whitecard{Basis}{Anfangen, zu Singen und zu Tanzen.}%
 \whitecard{Basis}{Authentische\newline mexikanische\newline Cuisine.}%
-
 \whitecard{Basis}{Balzverhalten.}%
+
 \whitecard{Basis}{Bei den\newline Special\newline Olympics\newline schummeln.}%
 \whitecard{Basis}{Bei der\newline Erwähnung von\newline Hutus und\newline Tutsis\newline unkontrollierbar\newline kichern müssen.}%
-
 \whitecard{Basis}{Beidseitige\newline Bereitschaft\newline zum nuklearen\newline Gegenschlag.}%
+
 \whitecard{Basis}{Benutzte\newline Unterhosen.}%
 \whitecard{Basis}{Betagte\newline japanische\newline Männer.}%
-
 \whitecard{Basis}{Bienen?}%
 
 \whitecard{Basis}{Bill Nye,\newline dieser Wissenschafts-Heini.}%
@@ -336,24 +335,24 @@
 \blackcard{1}{Basis}{Auf was\newline verzichtest du\newline in der\newline Fastenzeit?\newline \underl.}%
 \blackcard{1}{Basis}{Der Klassenausflug wurde komplett von \underl ruiniert.}%
 
-\blackcard{1}{Basis}{Es tut mir Leid, Herr Professor, aber ich konnte meine Hausaufgaben nicht machen, weil \underl.}%
+\blackcard{1}{Basis}{Es tut mir Leid, Herr Professor, aber ich konnte meine\newline Hausaufgaben\newline aufgrund von \underl nicht\newline machen.}%
 \blackcard{1}{Basis}{Ich habe 99 Probleme, aber \underl ist keines davon.}%
 \blackcard{2}{Basis}{Ich habe \underl \newline nie wirklich verstanden, bis \newline  ich auf \underl \newline  gestoßen bin.}%
 
 \blackcard{1}{Basis}{Ich komme klar mit ein wenig Hilfe von \underl.}%
 \blackcard{1}{Basis}{Ich trinke, um \underl zu vergessen.}%
-\blackcard{2}{Basis}{In einer Welt verwüstet von \underl, ist dein einziger Trost \underl.}%
+\blackcard{2}{Basis}{In einer Welt verwüstet von \underl, ist \underl dein\newline einziger Trost.}%
 
-\blackcard{1}{Basis}{Ja richtig, ich habe \underl getötet. Willst du wissen wie?}%
+\blackcard{2}{Basis}{Ja richtig, ich habe \underl getötet. Willst du wissen wie?}%
 \blackcard{2}{Basis}{Liebe Margret, Ich habe Probleme mit \underl.\newline Kannst du mir einen Rat geben?}%
 \blackcard{1}{Basis}{Man sagt, im Knast könne man für 200 Zigaretten \underl bekommen.}%
 
 \blackcard{1}{Basis}{Nach den\newline Erdbeben\newline brachte Bill\newline Gates \underl zu\newline den Haitianern.}%
 \blackcard{1}{Basis}{Papa, warum weint Mama?}%
-\blackcard{3}{Basis}{Schritt 1: \underl.\newline Schritt 2: \underl.\newline Schritt 3: Profit.}%
+\blackcard{2}{Basis}{Schritt 1: \underl.\newline Schritt 2: \underl.\newline Schritt 3: Profit.}%
 
 \blackcard{2}{Basis}{...Und der Preis für \underl geht an \underl.}%
-\blackcard{1}{Basis}{\underl. High Five, bro.}%
+\blackcard{1}{Basis}{\underl. High Five, Bro.}%
 \blackcard{2}{Basis}{\underl ist eine heikle Lage die zu \underl führt.}%
 
 \blackcard{1}{Basis}{\underl. So will ich sterben!}%
@@ -366,35 +365,35 @@
 
 \blackcard{1}{Basis}{Was bringe ich aus der Türkei mit?}%
 \blackcard{1}{Basis}{Was denkt\newline Angela Merkel\newline gerade?\newline \underl.}%
-\blackcard{1}{Basis}{Was gibt es tonnenweise im Himmel?}%
+\blackcard{1}{Basis}{Was gibt es\newline tonnenweise im\newline Himmel?}%
 
 \blackcard{1}{Basis}{Was hat meine letzte Beziehung beendet?}%
-\blackcard{1}{Basis}{Was hat nie verfehlt,\newline eine Party\newline zu beleben?}%
-\blackcard{1}{Basis}{Was hilft Angela Merkel zum Entspannen?}%
+\blackcard{1}{Basis}{Was hat nie\newline verfehlt,\newline eine Party\newline zu beleben?}%
+\blackcard{1}{Basis}{Was hilft Angela\newline Merkel zum\newline Entspannen?}%
 
 \blackcard{1}{Basis}{Was ist denn das für ein Geräusch?}%
 \blackcard{1}{Basis}{Was ist denn das für ein Geruch?}%
-\blackcard{1}{Basis}{Was ist der beste Freund eines Mädchens?}%
+\blackcard{1}{Basis}{Was ist der beste\newline Freund eines\newline Mädchens?}%
 
 \blackcard{1}{Basis}{Was ist die neue Modediät?}%
-\blackcard{1}{Basis}{Was ist meine geheime Kraft?}%
+\blackcard{1}{Basis}{Was ist meine\newline geheime Kraft?}%
 \blackcard{1}{Basis}{Was verstecken meine Eltern vor mir?}%
 
-\blackcard{1}{Basis}{Was werde ich aus der Zukunft mitbringen, um alle davon zu überzeugen, dass ich ein großartiger Magier bin?}%
-\blackcard{1}{Basis}{Was willst du nicht in deinem asiatischen Essen finden?}%
+\blackcard{1}{Basis}{Was werde ich aus\newline der Zukunft\newline mitbringen, um\newline alle davon zu\newline überzeugen, dass\newline ich ein großartiger\newline Magier bin?}%
+\blackcard{1}{Basis}{Was willst du nicht\newline in deinem\newline asiatischen\newline Essen finden?}%
 \blackcard{1}{Basis}{Was wird mit dem Alter besser?}%
 
-\blackcard{1}{Basis}{Was würde Oma ekelhaft, aber doch seltsam bezaubernd finden?}%
-\blackcard{1}{Basis}{Wenn ich ein\newline Milliadär wäre,\newline um wem zu gedenken würde ich eine Statue bauen?}%
+\blackcard{1}{Basis}{Was würde Oma\newline ekelhaft, aber doch\newline seltsam\newline bezaubernd\newline finden?}%
+\blackcard{1}{Basis}{Wenn ich ein\newline Milliadär wäre,\newline um wem zu\newline gedenken\newline würde ich eine\newline Statue bauen?}%
 \blackcard{1}{Basis}{Wenn ich König von Deutschland wär, würde ich das Ministerium für \underl ins Leben rufen.}%
 
 \blackcard{1}{Basis}{Ich pflege meinen Beziehungsstatus mit \underl.}%
-\blackcard{1}{Basis}{Wir stellen vor: Xtreme Fußball! Es ist wie normales Fußball, nur mit \underl.}%
-\blackcard{1}{Basis}{Womit wirst du immer einen Partner beeindrucken können?}%
+\blackcard{1}{Basis}{Wir stellen vor:\newline Xtreme Fußball!\newline Es ist wie\newline normales Fußball,\newline nur mit \underl.}%
+\blackcard{1}{Basis}{Womit wirst du\newline immer deinen\newline Partner\newline beeindrucken\newline können?}%
 
 \blackcard{1}{Basis}{Ab sofort im Flugzeug verboten: \underl.}%
-\blackcard{3}{Basis}{Schreibe einen Haiku:\newline \underl \newline \underl \newline \underl}%
-\blackcard{1}{Basis}{Wie motivieren die Lehrer an Hauptschulen ihre Schüler, zu lernen?}%
+\blackcard{3}{Basis}{Schreibe einen\newline Haiku:\newline \underl \newline \underl \newline \underl}%
+\blackcard{1}{Basis}{Wie motivieren die\newline Lehrer an\newline Hauptschulen\newline ihre Schüler,\newline zu lernen?}%
 
 \blackcard{1}{Basis}{\underl. Es ist eine Falle!}%
 \blackcard{1}{Basis}{\underl, davon kann man nicht nur einen haben!}%
