Added andras corrections.

--- a/categories/boese.tex
+++ b/categories/boese.tex
@@ -20,7 +20,6 @@
 % avoid placing whitespace character that are not intended inside these files.
 %
 \titlecard{Böse}%
-\whitecard{Böse}{In Polen einmarschieren.}%
 \whitecard{Böse}{Abtreibungen\newline mit\newline Kleiderbügeln.}%
 
 \whitecard{Böse}{AIDS.}%
@@ -28,7 +27,7 @@
 \whitecard{Böse}{Auto-\newline kannibalismus.}%
 
 \whitecard{Böse}{Ein Fötus.}%
-\whitecard{Böse}{Nekrohpilie.}%
+\whitecard{Böse}{Nekrophilie.}%
 \whitecard{Böse}{Eine Pyramide\newline aus\newline abgetrennten\newline Köpfen.}%
 
 \whitecard{Böse}{Ein Kühlschrank voller Organe.}%
@@ -65,6 +64,7 @@
 
 \whitecard{Böse}{Ethnische\newline Säuberung.}%
 \whitecard{Böse}{Kriegsbedingte Amputationen.}%
+\whitecard{Böse}{Die jährliche Massenhinrichtung.}%
 
 \blackcard{1}{Böse}{Wofür ist Krieg gut?}%
 \blackcard{1}{Böse}{Das Leben der Indianer wurde für immer verändert, als die Weißen Männer ihnen \underl zeigten.}%
