--- a/categories/culture.tex
+++ b/categories/culture.tex
@@ -24,7 +24,7 @@
 \whitecard{Kultur}{Cards against Humanity.}%
 
 \whitecard{Kultur}{Darth Vader.}%
-\whitecard{Kultur}{Das\newline Cookie Monster.}%
+\whitecard{Kultur}{Das\newline Krümel Monster.}%
 \whitecard{Kultur}{Die Macht.}%
 
 \whitecard{Kultur}{Eine M. Night\newline Shyamalan\newline Story-Wendung.}%
@@ -53,7 +53,7 @@
 
 \whitecard{Kultur}{Vera Int-Veen}%
 \whitecard{Kultur}{William Shatner.}%
-\whitecard{Kultur}{Winnie der Puh.}%
+\whitecard{Kultur}{Winnie Puh.}%
 
 \whitecard{Kultur}{Til Schweiger.}%
 \whitecard{Kultur}{Morgan\newline Freemans\newline Stimme.}%
@@ -63,7 +63,7 @@
 \whitecard{Kultur}{BATMAN!!!}%
 \whitecard{Kultur}{Das Flötensolo aus "My Heart Will Go On".}%
 
-\whitecard{Kultur}{Bastian\newline Pastevkas\newline Schauspielkarriere.}%
+\whitecard{Kultur}{Bastian\newline Pastewkas\newline Schauspiel-\newline karriere.}%
 
 \blackcard{1}{Kultur}{In Ihrem neuen Film hat Hannah Montana zum ersten Mal mit \underl zu kämpfen.}%
 \blackcard{1}{Kultur}{Bevor ich Sie töte, Herr Bond, muss ich Ihnen \underl zeigen.}%
@@ -73,7 +73,7 @@
 \blackcard{1}{Kultur}{Demnächst erscheint: Harry Potter und die Kammer der \underl.}%
 \blackcard{1}{Kultur}{Gleich auf RTL:\newline die Weltmeisterschaft der \underl.}%
 
-\blackcard{1}{Kultur}{RTLs neue Reality-TV-Show - Jetzt mit 8 Stars die mit \underl zusammenleben.}%
+\blackcard{1}{Kultur}{RTLs neue Reality-TV-Show - Jetzt mit 8 Stars die mit \underl\newline zusammenleben.}%
 \blackcard{1}{Kultur}{Was hat Vin Diesel zum Mittag gegessen?}%
 \blackcard{1}{Kultur}{Was ist Batmans geheime Vorliebe?}%
 
