--- a/categories/eklig.tex
+++ b/categories/eklig.tex
@@ -21,7 +21,7 @@
 %
 \titlecard{Eklig}%
 \whitecard{Eklig}{Brennende Schisse.}%
-\whitecard{Eklig}{Ein Ball aus Ohrenschmalz, Samen und Fussnägeln.}%
+\whitecard{Eklig}{Ein Ball aus Ohrenschmalz, Sperma und Fussnägeln.}%
 
 \whitecard{Eklig}{Ein bisschen pinkeln.}%
 \whitecard{Eklig}{Durchfall.\newline Für immer.}%
@@ -35,7 +35,7 @@
 \whitecard{Eklig}{Zwei\newline Kleinwüchsige,\newline die in einen\newline Eimer\newline scheissen.}%
 \whitecard{Eklig}{An Dünnschiss sterben.}%
 
-\whitecard{Eklig}{Günther Jauchs weicher,\newline beschissener\newline Körper.}%
+\whitecard{Eklig}{Thomas Gottschalks weicher,\newline verschrumpelter\newline Körper.}%
 \whitecard{Eklig}{Vollgeschissene Windeln.}%
 \whitecard{Eklig}{Wenn man furzt und ein bisschen mit rauskommt.}%
 
@@ -44,3 +44,4 @@
 \whitecard{Eklig}{Ein Schwamm\newline voller\newline Katzenpisse.}
 
 \blackcard{2}{Eklig}{Für meinen nächsten Trick werde ich \underl aus \underl rausziehen.}%
+\blackcard{1}{Eklig}{Was lässt mich unkontrolliert furzen?}%
