--- a/categories/history.tex
+++ b/categories/history.tex
@@ -35,6 +35,13 @@
 
 \whitecard{Geschichte}{Katapulte.}%
 \whitecard{Geschichte}{Marcus Iunius Brutus.}%
+\whitecard{Geschichte}{Beidseitige\newline Bereitschaft\newline zum nuklearen\newline Gegenschlag.}%
+
+\whitecard{Geschichte}{Der\newline Übermensch.}%
+\whitecard{Geschichte}{In Polen einmarschieren.}%
+\whitecard{Geschichte}{Gandhi.}%
+
+\whitecard{Geschichte}{Martin Luther King.}%
 
 \blackcard{1}{Geschichte}{Als der Pharaoh seine Meinung nicht änderte, beschwörte Moses eine Plage von \underl herauf.}%
 \blackcard{1}{Geschichte}{Das Naturkundemuseum stellt jetzt auch \underl aus.}%
