--- a/categories/religion.tex
+++ b/categories/religion.tex
@@ -19,13 +19,13 @@
 % Please note: All whitespace characters might break this document. Please
 % avoid placing whitespace character that are not intended inside these files.
 %
-\titlecard{Religion}
+\titlecard{Religion}%
 \whitecard{Religion}{72 Jungfrauen.}%
 \whitecard{Religion}{Den Antichrist gebären.}%
 
 \whitecard{Religion}{Das Blut von\newline Jesus Christus.}%
-\whitecard{Religion}{Das jüngste\newline Gericht.}%
-\whitecard{Religion}{Der gesamte Chor aus einem Mormonen-Gotteshaus.}%
+\whitecard{Religion}{Das Jüngste\newline Gericht.}%
+\whitecard{Religion}{Der gesamte Chor eines Mormonen-Gotteshauses.}%
 
 \whitecard{Religion}{Der Papst.}%
 \whitecard{Religion}{Der Teufel höchst selbst.}%
@@ -35,7 +35,6 @@
 \whitecard{Religion}{Die Pfadfinder.}%
 \whitecard{Religion}{Gott.}%
 
-\whitecard{Religion}{Martin Luther King.}%
 \whitecard{Religion}{Meine Seele.}%
 \whitecard{Religion}{Messdiener.}%
 
