--- a/commands.tex
+++ b/commands.tex
@@ -35,7 +35,7 @@
 
 
 \newcommand{\titleleft}{CARDS AGAINST HUMANITY}
-\newcommand{\underl}{\rule{2cm}{.5pt}}
+\newcommand{\underl}{\rule{2cm}{.5pt}{}}
 
 \newcommand{\blackcard}[3] {%
 	\begin{tikzpicture}%
