--- a/categories/basic.tex
+++ b/categories/basic.tex
@@ -25,15 +25,14 @@
 
 \whitecard{Basis}{Alkoholismus.}%
 \whitecard{Basis}{Alten Leuten winken.}%
-\whitecard{Basis}{An Dingen\newline lecken, um sie\newline für sich selbst zu\newline beanspruchen.}%
+\whitecard{Basis}{An Dingen\newline lecken, um sie\newline für sich zu\newline beanspruchen.}%
 
-\whitecard{Basis}{Anfangen, zu Singen und zu Tanzen.}%
-\whitecard{Basis}{Authentische\newline mexikanische\newline Cuisine.}%
+\whitecard{Basis}{Anfangen, zu singen und zu tanzen.}%
+\whitecard{Basis}{Authentische\newline mexikanische\newline Küche.}%
 \whitecard{Basis}{Balzverhalten.}%
 
 \whitecard{Basis}{Bei den\newline Special\newline Olympics\newline schummeln.}%
 \whitecard{Basis}{Bei der\newline Erwähnung von\newline Hutus und\newline Tutsis\newline unkontrollierbar\newline kichern müssen.}%
-\whitecard{Basis}{Beidseitige\newline Bereitschaft\newline zum nuklearen\newline Gegenschlag.}%
 
 \whitecard{Basis}{Benutzte\newline Unterhosen.}%
 \whitecard{Basis}{Betagte\newline japanische\newline Männer.}%
@@ -43,7 +42,7 @@
 \whitecard{Basis}{Bis nach der\newline Hochzeit\newline warten.}%
 \whitecard{Basis}{Burschen ohne Ärsche.}%
 
-\whitecard{Basis}{Darke und\newline mysteriöse\newline Mächte,\newline die man nicht kontrollieren kann.}%
+\whitecard{Basis}{Dunkle und\newline mysteriöse\newline Mächte,\newline die man nicht kontrollieren kann.}%
 \whitecard{Basis}{Das Ende der Straße.}%
 \whitecard{Basis}{Das Herz eines Kindes.}%
 
@@ -56,7 +55,7 @@
 \whitecard{Basis}{Das Verletzen unserer grundlegensten Menschenrechte.}%
 
 \whitecard{Basis}{Das Wunder der Geburt.}%
-\whitecard{Basis}{Dein\newline merkwürdiger\newline Bruder.}%
+\whitecard{Basis}{Ein\newline merkwürdiger\newline Bruder.}%
 \whitecard{Basis}{Dem Sonnen-\newline untergang\newline entgegenreiten.}%
 
 \whitecard{Basis}{Der Geruch alter Leute.}%
@@ -65,17 +64,15 @@
 
 \whitecard{Basis}{Der\newline Erklär-Bär-Blick.}%
 \whitecard{Basis}{Der\newline Ku-Klux-Klan.}%
-\whitecard{Basis}{Der\newline Übermensch.}%
 
 \whitecard{Basis}{Der Rhythmus Afrikas.}%
 \whitecard{Basis}{Der unausweichliche\newline Hitzetod des\newline Universums.}%
-\whitecard{Basis}{Die Hose\newline runterlassen.}%
+\whitecard{Basis}{Die Hosen\newline runterlassen.}%
 
-\whitecard{Basis}{Die jährliche Massenhinrichtung.}%
 \whitecard{Basis}{Die Kunst der Verführung.}%
 \whitecard{Basis}{Die Leiden einer Frau.}%
 
-\whitecard{Basis}{Die\newline Alibi-Minderheit.}%
+\whitecard{Basis}{Die\newline Quoten-Minderheit.}%
 \whitecard{Basis}{Die Placenta.}%
 \whitecard{Basis}{Die unendliche menschliche Dummheit.}%
 
@@ -91,15 +88,12 @@
 \whitecard{Basis}{Ein Arschloch zu Kindern sein.}%
 \whitecard{Basis}{Ein Arsch mit Ohren sein.}%
 
-\whitecard{Basis}{Ein bisschen\newline gottverdammte\newline Ruhe und\newline Frieden.}%
+\whitecard{Basis}{Ein bisschen\newline Ruhe und\newline Frieden, verdammt nochmal.}%
 \whitecard{Basis}{Ein chinesisches Gymnastikteam.}%
 \whitecard{Basis}{Eine Backpfeife.}%
 
 \whitecard{Basis}{Eine Billiarde Euro.}%
 \whitecard{Basis}{Eine Eishacken-Lobotomie.}%
-\whitecard{Basis}{Eine Erektion, die länger als vier Stunden dauert.}%
-
-\whitecard{Basis}{Eine Erektion verstecken.}%
 \whitecard{Basis}{Eine hässliche Fresse.}%
 \whitecard{Basis}{Ein Ei legen.}%
 
@@ -107,13 +101,13 @@
 \whitecard{Basis}{Eine Jungfrau in einen Vulkan werfen.}%
 \whitecard{Basis}{Einem Roboter beibringen, zu lieben.}%
 
-\whitecard{Basis}{Eine\newline asymmetrische Brust-Vergößerung.}%
+\whitecard{Basis}{Eine\newline asymmetrische Brust-vergößerung.}%
 \whitecard{Basis}{Eine\newline enttäuschende Geburtstags-\newline party.}%
 \whitecard{Basis}{Eine\newline geschwätzige\newline Antilope.}%
 
 \whitecard{Basis}{Eine\newline homoerotische\newline Volleyball-\newline Montage.}%
 \whitecard{Basis}{Eine\newline Mitgliedschaft\newline in einem\newline Fitness-Center.}%
-\whitecard{Basis}{Einen\newline Kerzenhalter\newline auf deine\newline Feinde fallen\newline lassen und\newline am Seil\newline hochklettern.}%
+\whitecard{Basis}{Einen\newline Kronleuchter\newline auf deine\newline Feinde fallen\newline lassen und\newline am Seil\newline hochklettern.}%
 
 \whitecard{Basis}{Einen Schmollmund machen.}%
 \whitecard{Basis}{Eine salzige Überraschung.}%
@@ -137,14 +131,14 @@
 
 \whitecard{Basis}{Ein\newline gottverdammter Zauberer\newline sein.}%
 \whitecard{Basis}{Ein\newline Mikroschwein\newline mit einem\newline Regenmantel\newline und\newline Gummiestiefeln.}%
-\whitecard{Basis}{Ein Pantomime,\newline der einen\newline Herzanfall hat.}%
+\whitecard{Basis}{Ein Pantomime,\newline der einen\newline Herzinfarkt hat.}%
 
 \whitecard{Basis}{Ein Ratschlag von einem weisen alten Mann.}%
 \whitecard{Basis}{Ein rauchender Affe.}%
 \whitecard{Basis}{Ein Sack voller magischer Bohnen.}%
 
 \whitecard{Basis}{Ein scharfer Frühstücks-Burrito.}%
-\whitecard{Basis}{Ein schlechtes Mundwerk.}%
+\whitecard{Basis}{Ein schmutziges Mundwerk.}%
 \whitecard{Basis}{Ein Stamm von Kriegerinnen.}%
 
 \whitecard{Basis}{Ein törichter Mord.}%
@@ -159,7 +153,6 @@
 \whitecard{Basis}{Emotionen.}%
 \whitecard{Basis}{Erdrückende Schulden.}%
 
-\whitecard{Basis}{Eregierte\newline Nippel.}%
 \whitecard{Basis}{Essbare\newline Unterwäsche.}%
 \whitecard{Basis}{Explosionen.}%
 
@@ -169,10 +162,9 @@
 
 \whitecard{Basis}{Fingerfarben.}%
 \whitecard{Basis}{Fleischfressende Bakterien.}%
-\whitecard{Basis}{Fluglose Vögel.}%
+\whitecard{Basis}{Flugunfähige\newline Vögel.}%
 
 \whitecard{Basis}{Frauen in Joghurt-Werbespots.}%
-\whitecard{Basis}{Freunde mit\newline gewissen\newline Vorzügen.}%
 \whitecard{Basis}{Friendly Fire.}%
 
 \whitecard{Basis}{Frohlocken.}%
@@ -208,7 +200,6 @@
 \whitecard{Basis}{Hippiemusik.}%
 
 \whitecard{Basis}{Hoffnung.}%
-\whitecard{Basis}{Holzfäller\newline Phantasien.}%
 \whitecard{Basis}{Homosexueller\newline Lebensstil.}%
 
 \whitecard{Basis}{Hormon-Injektionen.}%
@@ -245,7 +236,6 @@
 
 \whitecard{Basis}{Meine Warzen.}%
 \whitecard{Basis}{Mein schwarzer Hintern.}%
-\whitecard{Basis}{Mein Sexleben.}%
 
 \whitecard{Basis}{Menstruell\newline bedingte\newline Wutanfälle.}%
 \whitecard{Basis}{Natürliche männliche Verbesserungen.}%
@@ -257,7 +247,7 @@
 
 \whitecard{Basis}{Opponierbare Daumen.}%
 \whitecard{Basis}{Östrogen.}%
-\whitecard{Basis}{Passiv-aggressive\newline Post-It Zettel.}%
+\whitecard{Basis}{Passiv-aggressive\newline Post-Its.}%
 
 \whitecard{Basis}{Penis-Neid.}%
 \whitecard{Basis}{Pferdefleisch.}%
@@ -275,7 +265,6 @@
 \whitecard{Basis}{Rück-\newline erstattungen.}%
 \whitecard{Basis}{Saxophon Solos.}%
 
-\whitecard{Basis}{Schenkel-\newline schnorcheln.}%
 \whitecard{Basis}{Schlampen.}%
 \whitecard{Basis}{Schlechte, lebensverändernde Entscheidungen.}%
 
@@ -292,7 +281,7 @@
 \whitecard{Basis}{Snobismus.}%
 
 \whitecard{Basis}{Sonnenschein und\newline Regenbögen.}%
-\whitecard{Basis}{So zu tun, als interessiere es einen.}%
+\whitecard{Basis}{So zu tun, als ob es einen interessieren würde.}%
 \whitecard{Basis}{Spektakuläre Bauchmuskeln.}%
 
 \whitecard{Basis}{Spießer.}%
@@ -301,9 +290,9 @@
 
 \whitecard{Basis}{Stille.}%
 \whitecard{Basis}{Suppe, die zu heiß ist.}%
-\whitecard{Basis}{Süße, süße\newline Vergeltug.}%
+\whitecard{Basis}{Süße, süße\newline Rache.}%
 
-\whitecard{Basis}{Swooping}%
+\whitecard{Basis}{Swooping.}%
 \whitecard{Basis}{Tänzeln.}%
 \whitecard{Basis}{Teenager Schwangerschaft.}%
 
@@ -363,13 +352,13 @@
 \blackcard{1}{Basis}{Warum kann ich nachts nicht schlafen?}%
 \blackcard{1}{Basis}{Warum tut mir alles weh?}%
 
-\blackcard{1}{Basis}{Was bringe ich aus der Türkei mit?}%
+\blackcard{1}{Basis}{Was habe ich aus Dänemark mitgebracht?}%
 \blackcard{1}{Basis}{Was denkt\newline Angela Merkel\newline gerade?\newline \underl.}%
 \blackcard{1}{Basis}{Was gibt es\newline tonnenweise im\newline Himmel?}%
 
 \blackcard{1}{Basis}{Was hat meine letzte Beziehung beendet?}%
 \blackcard{1}{Basis}{Was hat nie\newline verfehlt,\newline eine Party\newline zu beleben?}%
-\blackcard{1}{Basis}{Was hilft Angela\newline Merkel zum\newline Entspannen?}%
+\blackcard{1}{Basis}{Was hilft Angela\newline Merkel zu\newline entspannen?}%
 
 \blackcard{1}{Basis}{Was ist denn das für ein Geräusch?}%
 \blackcard{1}{Basis}{Was ist denn das für ein Geruch?}%
@@ -384,7 +373,7 @@
 \blackcard{1}{Basis}{Was wird mit dem Alter besser?}%
 
 \blackcard{1}{Basis}{Was würde Oma\newline ekelhaft, aber doch\newline seltsam\newline bezaubernd\newline finden?}%
-\blackcard{1}{Basis}{Wenn ich ein\newline Milliadär wäre,\newline um wem zu\newline gedenken\newline würde ich eine\newline Statue bauen?}%
+\blackcard{1}{Basis}{Wenn ich ein\newline Milliadär wäre,\newline wem würde ich eine\newline Statue widmen?}%
 \blackcard{1}{Basis}{Wenn ich König von Deutschland wär, würde ich das Ministerium für \underl ins Leben rufen.}%
 
 \blackcard{1}{Basis}{Ich pflege meinen Beziehungsstatus mit \underl.}%
