--- a/categories/drogen.tex
+++ b/categories/drogen.tex
@@ -30,4 +30,4 @@
 \whitecard{Drogen}{Crystal Meth.}%
 
 \blackcard{1}{Drogen}{Was ist\newline meine\newline Anti-Droge?}%
-\blackcard{2}{Drogen}{Als einen Acid-Trip hatte, wurde \underl zu \underl.}%
+\blackcard{2}{Drogen}{Als ich einen\newline Acid-Trip hatte,\newline wurde \underl zu\newline \underl.}%
