--- a/categories/fsk16.tex
+++ b/categories/fsk16.tex
@@ -35,7 +35,7 @@
 \whitecard{FSK 16}{Fliegende Sex-Schlangen.}%
 \whitecard{FSK 16}{Erotische Kissen-\newline schlachten.}%
 
-\whitecard{FSK 16}{"Ihn" rausholen.}%
+\whitecard{FSK 16}{``Ihn'' rausholen.}%
 \whitecard{FSK 16}{Klitoris.}%
 \whitecard{FSK 16}{Lance\newline Armstrongs\newline fehlender\newline Hoden.}%
 
@@ -63,13 +63,24 @@
 \whitecard{FSK 16}{Sexuelle\newline Spannungen.}%
 \whitecard{FSK 16}{Sich nackt\newline ausziehen und\newline Kika gucken.}%
 
-\whitecard{FSK 16}{Ein-\newline vernehmlicher Sex.}%
+\whitecard{FSK 16}{Einvernehmlicher Sex.}%
 \whitecard{FSK 16}{Alice Schwarzers Vagina.}%
 \whitecard{FSK 16}{Bilder von Brüsten.}%
 
-\blackcard{1}{FSK 16}{Eine Studie ergab, dass Teenager 50 Prozent weniger Sex hatten, nachdem man ihnen \underl zeigte.}%
-\blackcard{1}{FSK 16}{Ich denke während des Sex gerne über \underl nach.}%
-\blackcard{2}{FSK 16}{Sie sagten wir wären verrückt.\newline Sie sagten, wir könnten nicht \underl in \underl stecken.\newline Sie lagen falsch.}%
+\whitecard{FSK 16}{Eine Erektion, die länger als vier Stunden dauert.}%
+\whitecard{FSK 16}{Eine Erektion verstecken.}%
+\whitecard{FSK 16}{Eregierte\newline Nippel.}%
 
-\blackcard{1}{FSK 16}{Was lässt mich unkontrolliert furzen?}%
+\whitecard{FSK 16}{Freunde mit\newline gewissen\newline Vorzügen.}%
+\whitecard{FSK 16}{Holzfäller\newline Phantasien.}%
+\whitecard{FSK 16}{Mein Sexleben.}%
+
+\whitecard{FSK 16}{Schenkel-\newline schnorcheln.}%
+\whitecard{FSK 16}{Panda Sex.}%
+\whitecard{FSK 16}{Eine\newline Schildkröte, die einem in den\newline Penis beißt.}%
+
+\blackcard{1}{FSK 16}{Eine Studie ergab, dass Teenager 50 Prozent weniger Sex hatten, nachdem man ihnen \underl zeigte.}%
+\blackcard{1}{FSK 16}{Ich denke während dem Sex gerne über \underl nach.}%
+\blackcard{2}{FSK 16}{Sie sagten, wir wären verrückt.\newline Sie sagten, wir könnten nicht \underl in \underl stecken.\newline Sie lagen falsch.}%
+
 \blackcard{1}{FSK 16}{Wie verlor ich meine Jungfräulichkeit?}%
