Changed filenames to german.

--- a/cah-fullformat-german.tex
+++ b/cah-fullformat-german.tex
@@ -31,7 +31,7 @@
 
 \include{commands}
 
-\include{categories/basic}
+\include{categories/basis}
 \newpage
 \include{categories/boese}
 \newpage
@@ -43,14 +43,14 @@
 \newpage
 \include{categories/fsk18}
 \newpage
-\include{categories/politics}
+\include{categories/politik}
 \newpage
-\include{categories/culture}
+\include{categories/kultur}
 \newpage
 \include{categories/religion}
 \newpage
-\include{categories/history}
+\include{categories/geschichte}
 \newpage
-\include{categories/ads}
+\include{categories/werbung}
 
 \end{document}
